--- a/index.css
+++ b/index.css
@@ -1,7 +1,25 @@
 
+body {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.score-label {
+  display: inline-flex;
+}
+
+.score-label > p {
+  margin: 0 0;
+}
+
+.score-label:not(:first-child) {
+  margin-left: 10px;
+}
+
 canvas {
-  height: 90vh;
-  width: 90vw;
+  height: calc(90vh - 160px);
 }
 
 * {
